# DSpider

./: .gitignore  Design.md  README.md  docker-compose.yml  main.py  pyproject.toml  start_celery_worker_windows.py
common/: celery_config.py  config_manager.py  logger_config.py  mongodb_client.py  mysql_client.py  rabbitmq_client.py
config/: config.json  dev.yaml  logging.json  logging.yaml  prod.yaml  test.yaml
cookie_manager/: cookie_manager.py
data/mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4236595373113368238.wt  collection-2--4236595373113368238.wt  collection-2-5576893532419520804.wt  collection-4--4236595373113368238.wt  collection-7--4236595373113368238.wt  index-1--4236595373113368238.wt  index-3--4236595373113368238.wt  index-3-5576893532419520804.wt  index-5--4236595373113368238.wt  index-6--4236595373113368238.wt  sizeStorer.wt  (+2 more)
docker/: celery_worker.Dockerfile  master.Dockerfile  processor.Dockerfile  reproduce.Dockerfile  worker.Dockerfile
master/: Dockerfile  Scheduler.py  master.py  master_config.py  requirements.txt
playwright_worker/: celery_app.py  worker.py
processor/: Dockerfile  processor.py  requirements.txt
test/: CONTAINER_REPRODUCE_GUIDE.md  README.md  conftest.py  container_reproduce.py  reproduce_event_loop_error.py  simple_reproduce.py  start_celery_worker_windows.py  test_logger_config.py  test_master.py  test_mongodb_client.py  test_processor.py  test_rabbitmq_client.py  test_worker.py
worker/: Dockerfile  __init__.py  cookie_manager.py  cookie_signals.py  cookie_updater.py  redis_comm.py  requirements.txt  worker.py
(+53 files in other folders)
